Fix headings cropped on smaller viewports and remove reference to Roboto Condensed

--- a/app/webroot/sass/_globals/_headings.scss
+++ b/app/webroot/sass/_globals/_headings.scss
@@ -1,6 +1,5 @@
 
 h1 {
-    font-family: 'Roboto Condensed', sans-serif;
     font-size: 4rem;
     color: transparent;
     font-size: 2rem;
@@ -8,7 +7,7 @@ h1 {
     line-height: 1.1;
     margin: 4rem auto;
     overflow: hidden;
-    padding: 0 2rem;
+    padding: 0;
     text-transform: uppercase;
     -webkit-text-stroke: 1px white;
 
